--- a/static/style.css
+++ b/static/style.css
@@ -9,7 +9,7 @@
 nav {
     height: 72px;
     line-height: 75px;
-    background-color: #ffffff;
+    background-color: #1BBC9B;
 }
 
 label.logo {
@@ -47,11 +47,11 @@ nav ul li a {
     font-weight: 600;
 }
 
-a.active {
+#menu a.active {
     border-radius: 5px;
     padding: 8px 18px;
     cursor: pointer;
-    background-color: #1BBC9B;
+    background-color: #FFFFFF;
     color: #000;
     transition: all 0.2s ease 0s;
 }
@@ -60,14 +60,14 @@ nav li a:hover {
     border-radius: 5px;
     padding: 8px 18px;
     cursor: pointer;
-    background-color: #1BBC9B;
+    background-color: #FFFFFF;
     color: #000;
     transition: all 0.2s ease 0s;
 }
 
 ul li a:hover {
-    background-color: #1BBC9B;
-    color: #fff;
+    background-color: #FFFFFF;
+    color: #000;
 }
 
 .checkbtn {
@@ -288,6 +288,50 @@ ul li a:hover {
 }
 /* //////////////////////////////////////////////////////////////////////////////////////////////// */
 /*  Meet Our Doctors */
+.card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 20px; /* Adjust as needed */
+  }
+
+  .card {
+    width: calc(33.33% - 20px); /* Adjust as needed */
+    background-color: #f9f9f9;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    margin-bottom: 20px;
+  }
+
+  .card-header {
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+
+  .card-content {
+    margin-bottom: 10px;
+  }
+
+  .button-container {
+    display: flex;
+    justify-content: center;
+  }
+
+  .appointment-button {
+    padding: 10px 20px;
+    font-size: 14px;
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+
+  .appointment-button:hover {
+    background-color: #45a049;
+  }
 .section_doctors {
     display: flex;
     padding: 0 35px;
@@ -807,7 +851,7 @@ button:hover {
 }
 
 .login-popup .popup-content .signup .Box form{
-    margin-left:17px;
+    margin-left:5px;
 }
 
 /* Login Doctor */
