--- a/templates/Blogs.html
+++ b/templates/Blogs.html
@@ -48,14 +48,13 @@
                     <i class="fas fa-bars"></i>
                 </label>
                 <label class="logo">Brain Mentor</label>
-                <ul>
-                    <li><a class="active" href="home">Home</a></li>
-                    <li><a href="detection">Detection</a></li>
-                    <li><a href="doctors">Doctors</a></li>
-                    <li><a href="patient_treat">Treatments</a></li>
-                    <li><a href="blog">Blogs</a></li>
-                    <li><a href="appointment" class="btn-appointment">Appointment</a></li>
-                     <li><a href="logout">Logout</a></li>
+                <ul id="menu">
+                    <li><a href="/home">Home</a></li>
+                    <li><a href="/detection">Detection</a></li>
+                    <li><a href="/doctors">Doctors</a></li>
+                    <li><a href="/patient_treat">Treatments</a></li>
+                    <li><a href="/blog">Blogs</a></li>
+                    <li><a href="/logout">Logout</a></li>
                 </ul>
             </nav>
         </header>
@@ -139,6 +138,33 @@
                     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
                     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
                     crossorigin="anonymous"></script>
+                    <script>
+                        document.addEventListener("DOMContentLoaded", function() {
+                            var links = document.querySelectorAll("#menu a");
+                            
+                            // Add click event listener to each link
+                            links.forEach(function(link) {
+                                link.addEventListener("click", function(event) {
+                                    // Remove "active" class from all links
+                                    links.forEach(function(otherLink) {
+                                        otherLink.classList.remove("active");
+                                    });
+                    
+                                    // Add "active" class to the clicked link
+                                    this.classList.add("active");
+                                });
+                            });
+                    
+                            // Set initial active link based on the current URL path
+                            var currentPath = window.location.pathname;
+                            links.forEach(function(link) {
+                                // Check if the current URL contains the link's href value
+                                if (currentPath.indexOf(link.getAttribute("href")) !== -1) {
+                                    link.classList.add("active");
+                                }
+                            });
+                        });
+                    </script>
 
             </body>
 
