--- a/templates/Blogs_Details.html
+++ b/templates/Blogs_Details.html
@@ -38,67 +38,18 @@
                 <i class="fas fa-bars"></i>
             </label>
             <label class="logo">Brain Mentor</label>
-            <ul>
-                <li><a class="active" href="home">Home</a></li>
-                <li><a href="detection">Detection</a></li>
-                <li><a href="doctors">Doctors</a></li>
-                <li><a href="patient_treat">Treatments</a></li>
-                <li><a href="blog">Blogs</a></li>
-                <li><a href="appointment" class="btn-appointment">Appointment</a></li>
-                <li><a href="logout">Logout</a></li>
+            <ul id="menu">
+                <li><a href="/home">Home</a></li>
+                <li><a href="/detection">Detection</a></li>
+                <li><a href="/doctors">Doctors</a></li>
+                <li><a href="/patient_treat">Treatments</a></li>
+                <li><a href="/blog">Blogs</a></li>
+                <li><a href="/logout">Logout</a></li>
             </ul>
         </nav>
     </header>
 
     <!-- Home Content -->
-    <main>
-        <div class="chatbot">
-
-            <a href="#" id="signup-patient"> <img src="/static/images/chatbot.png" alt="chatbot"></a>
-        </div>
-        <div class="chatbot-popup">
-            <div class="popup-content">
-                <div class="signup">
-                    <div class="chat">
-
-                        <!-- ChatBot -->
-                        <section class="msger">
-                            <header class="msger-header">
-                                <div class="msger-header-title">
-                                    <i class="fas fa-bug"></i> Chatbot <i class="fas fa-bug"></i>
-                                    <img src="/static/images/close.png" alt="close" class="close">
-                                </div>
-                            </header>
-
-                            <main class="msger-chat">
-                                <div class="msg left-msg">
-
-                                    <div class="msg-bubble">
-                                        <div class="msg-info">
-                                            <div class="msg-info-name">Chatbot</div>
-                                            <div class="msg-info-time">12:45</div>
-                                        </div>
-
-                                        <div class="msg-text">
-                                            Hi, welcome to ChatBot!
-                                        </div>
-                                    </div>
-                                </div>
-
-                            </main>
-
-                            <form class="msger-inputarea">
-                                <input type="text" class="msger-input" id="textInput"
-                                    placeholder="Enter your message...">
-                                <button type="submit" class="msger-send-btn">Send</button>
-                            </form>
-                        </section>
-
-                    </div>
-
-                </div>
-            </div>
-        </div>
 
         <div class="row mb-4" style=margin:40px;>
 
@@ -175,96 +126,37 @@
             </div>
         </footer>
     </main>
-
-    <!-- Chatbot Script -->
-    <script src='https://use.fontawesome.com/releases/v5.0.13/js/all.js'></script>
-    <script>
-
-        const msgerForm = get(".msger-inputarea");
-        const msgerInput = get(".msger-input");
-        const msgerChat = get(".msger-chat");
-
-
-        // Icons made by Freepik from www.flaticon.com
-        const BOT_IMG = "https://image.flaticon.com/icons/svg/327/327779.svg";
-        const PERSON_IMG = "https://image.flaticon.com/icons/svg/145/145867.svg";
-        const BOT_NAME = "    ChatBot";
-        const PERSON_NAME = "You";
-
-        msgerForm.addEventListener("submit", event => {
-            event.preventDefault();
-
-            const msgText = msgerInput.value;
-            if (!msgText) return;
-
-            appendMessage(PERSON_NAME, PERSON_IMG, "right", msgText);
-            msgerInput.value = "";
-            botResponse(msgText);
-        });
-
-        function appendMessage(name, img, side, text) {
-            //   Simple solution for small apps
-            const msgHTML = `
-<div class="msg ${side}-msg">
-  <div class="msg-img" style="background-image: url(${img})"></div>
-
-  <div class="msg-bubble">
-    <div class="msg-info">
-      <div class="msg-info-name">${name}</div>
-      <div class="msg-info-time">${formatDate(new Date())}</div>
-    </div>
-
-    <div class="msg-text">${text}</div>
-  </div>
-</div>
-`;
-
-            msgerChat.insertAdjacentHTML("beforeend", msgHTML);
-            msgerChat.scrollTop += 500;
-        }
-
-        function botResponse(rawText) {
-
-            // Bot Response
-            $.get("/get", { msg: rawText }).done(function (data) {
-                console.log(rawText);
-                console.log(data);
-                const msgText = data;
-                appendMessage(BOT_NAME, BOT_IMG, "left", msgText);
-
-            });
-
-        }
-
-
-        // Utils
-        function get(selector, root = document) {
-            return root.querySelector(selector);
-        }
-
-        function formatDate(date) {
-            const h = "0" + date.getHours();
-            const m = "0" + date.getMinutes();
-
-            return `${h.slice(-2)}:${m.slice(-2)}`;
-        }
-
-
-
-    </script>
-
-    <!-- ////////////////////////////////////////////////////// -->
-    <script>
-        document.getElementById("signup-patient").addEventListener("click", function () {
-            document.querySelector(".chatbot-popup").style.display = "flex";
-        })
-        document.querySelector(".close").addEventListener("click", function () {
-            document.querySelector(".chatbot-popup").style.display = "none";
-        })
-    </script>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
+        <script>
+            document.addEventListener("DOMContentLoaded", function() {
+                var links = document.querySelectorAll("#menu a");
+                
+                // Add click event listener to each link
+                links.forEach(function(link) {
+                    link.addEventListener("click", function(event) {
+                        // Remove "active" class from all links
+                        links.forEach(function(otherLink) {
+                            otherLink.classList.remove("active");
+                        });
+        
+                        // Add "active" class to the clicked link
+                        this.classList.add("active");
+                    });
+                });
+        
+                // Set initial active link based on the current URL path
+                var currentPath = window.location.pathname;
+                links.forEach(function(link) {
+                    // Check if the current URL contains the link's href value
+                    if (currentPath.indexOf(link.getAttribute("href")) !== -1) {
+                        link.classList.add("active");
+                    }
+                });
+            });
+        </script>
 
 </body>
 
