--- a/templates/Home.html
+++ b/templates/Home.html
@@ -63,8 +63,6 @@
         {% endif %}
     {% endwith %}
     
-
-        
         <!-- This is Nav Bar -->
         <header>
             <nav>
@@ -73,15 +71,16 @@
                     <i class="fas fa-bars"></i>
                 </label>
                 <label class="logo">Brain Mentor</label>
-                <ul>
-                    <li><a class="active" href="home">Home</a></li>
-                    <li><a href="detection">Detection</a></li>
-                    <li><a href="doctors">Doctors</a></li>
-                    <li><a href="patient_treat">Treatments</a></li>
-                    <li><a href="blog">Blogs</a></li>
-                    <li><a href="appointment" class="btn-appointment">Appointment</a></li>
-                    <li><a href="logout">Logout</a></li>
+                <ul id="menu">
+                    <li><a href="/home">Home</a></li>
+                    <li><a href="/detection">Detection</a></li>
+                    <li><a href="/doctors">Doctors</a></li>
+                    <li><a href="/patient_treat">Treatments</a></li>
+                    <li><a href="/blog">Blogs</a></li>
+                    <li><a href="/logout">Logout</a></li>
                 </ul>
+                
+                
             </nav>
         </header>
 
@@ -97,7 +96,7 @@
                             Lorem ipsum dolor sit amet consectetur
                             <br> adipisicing elit. Praesentium corporis quo.
                         </p>
-                        <a href="appointment" class="btn">Consult</a>
+                        <a href="doctors" class="btn">Consult</a>
 
 <!-- Chatbot
 Chat icon to toggle the chatbot -->
@@ -320,7 +319,36 @@ Chat icon to toggle the chatbot -->
                     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
                     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
                     crossorigin="anonymous"></script>
-
+                    <script>
+                        document.addEventListener("DOMContentLoaded", function() {
+                            var links = document.querySelectorAll("#menu a");
+                            
+                            // Add click event listener to each link
+                            links.forEach(function(link) {
+                                link.addEventListener("click", function(event) {
+                                    // Remove "active" class from all links
+                                    links.forEach(function(otherLink) {
+                                        otherLink.classList.remove("active");
+                                    });
+                    
+                                    // Add "active" class to the clicked link
+                                    this.classList.add("active");
+                                });
+                            });
+                    
+                            // Set initial active link based on the current URL path
+                            var currentPath = window.location.pathname;
+                            links.forEach(function(link) {
+                                // Check if the current URL contains the link's href value
+                                if (currentPath.indexOf(link.getAttribute("href")) !== -1) {
+                                    link.classList.add("active");
+                                }
+                            });
+                        });
+                    </script>
+                    
+                    
+                    
                    
    
     
@@ -358,15 +386,15 @@ Chat icon to toggle the chatbot -->
                     <i class="fas fa-bars"></i>
                 </label>
                 <label class="logo">Brain Mentor</label>
-                <ul>
-                    <li><a class="active" href="home">Home</a></li>
-                    <li><a href="detection">Detection</a></li>
-                    <li><a href="doctors">Doctors</a></li>
-                    <li><a href="patient_treat">Treatments</a></li>
-                    <li><a href="blog">Blogs</a></li>
-                    <li><a href="appointment" class="btn-appointment">Appointment</a></li>
-                    <li><a href="logout">Logout</a></li>
+                <ul id="menu">
+                    <li><a href="/home">Home</a></li>
+                    <li><a href="/detection">Detection</a></li>
+                    <li><a href="/doctors">Doctors</a></li>
+                    <li><a href="/patient_treat">Treatments</a></li>
+                    <li><a href="/blog">Blogs</a></li>
+                    <li><a href="/logout">Logout</a></li>
                 </ul>
+                
             </nav>
         </header>
 
@@ -379,10 +407,10 @@ Chat icon to toggle the chatbot -->
 
                         <h1><span>BrainMentor</span></h1>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur
+                            Lorem ipsum dolor sit ame t consectetur
                             <br> adipisicing elit. Praesentium corporis quo.
                         </p>
-                        <a href="appointment" class="btn">Consult</a>
+                        <a href="doctors" class="btn">Consult</a>
 
 <!-- Chatbot
 Chat icon to toggle the chatbot -->
@@ -605,6 +633,36 @@ Chat icon to toggle the chatbot -->
                     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
                     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
                     crossorigin="anonymous"></script>
+                    <script>
+                        document.addEventListener("DOMContentLoaded", function() {
+                            var links = document.querySelectorAll("#menu a");
+                            
+                            // Add click event listener to each link
+                            links.forEach(function(link) {
+                                link.addEventListener("click", function(event) {
+                                    // Remove "active" class from all links
+                                    links.forEach(function(otherLink) {
+                                        otherLink.classList.remove("active");
+                                    });
+                    
+                                    // Add "active" class to the clicked link
+                                    this.classList.add("active");
+                                });
+                            });
+                    
+                            // Set initial active link based on the current URL path
+                            var currentPath = window.location.pathname;
+                            links.forEach(function(link) {
+                                // Check if the current URL contains the link's href value
+                                if (currentPath.indexOf(link.getAttribute("href")) !== -1) {
+                                    link.classList.add("active");
+                                }
+                            });
+                        });
+                    </script>
+                    
+                    
+                    
                     {% endif %}
                   
 
