--- a/templates/Index.html
+++ b/templates/Index.html
@@ -1,37 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Brain Mentor - Signup</title>
-        <link rel="stylesheet" href="/static/style.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link
-            href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap"
-            rel="stylesheet">
-        <link
-            href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Poppins:wght@200;300;600&display=swap"
-            rel="stylesheet">
-        <link rel="apple-touch-icon" sizes="76x76"
-            href="static/images/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32"
-            href="static/images/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16"
-            href="static/images/favicon-16x16.png">
-        <link rel="manifest" href="static/images/site.webmanifest">
-        <link rel="mask-icon" href="static/images/safari-pinned-tab.svg"
-            color="#5bbad5">
-        <meta name="msapplication-TileColor" content="#da532c">
-        <meta name="theme-color" content="#ffffff">
-    </head>
-    <body>
-         <!-- Account Creation Message -->
-         {% with messages = get_flashed_messages(with_categories=true) %}
-        {% if messages %}
-            {% for category, message in messages %}
-            <div class="alert alert-{{category}} alert-dismissible fade show"
-                role="alert">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Brain Mentor - Signup</title>
+    <link rel="stylesheet" href="/static/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Poppins:wght@200;300;600&display=swap" rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="76x76" href="static/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="static/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="static/images/favicon-16x16.png">
+    <link rel="manifest" href="static/images/site.webmanifest">
+    <link rel="mask-icon" href="static/images/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+</head>
+<body>
+<!-- Account Creation Message -->
+{% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+        {% for category, message in messages %}
+            <div class="alert alert-{{category}} alert-dismissible fade show" role="alert">
                 <strong>Message:</strong>{{message}}
             </div>
             <script>
@@ -44,151 +36,157 @@
                     }, 2200); // 2200 milliseconds = 1 second
                 });
             </script>
-            {% endfor %}
-        {% endif %}
-    {% endwith %}
-        <section id="banner">
-            <label class="index-logo">Brain Mentor</label>
-            <div class="banner-text">
-                <h1>We Will Save You</h1>
-                <p>Unlocking Hope, One Scan at a Time. Welcome to Brain Mentor, where cutting-edge technology meets compassion for a <br> brighter, healthier tomorrow.</p>
-
-                <div class="banner-btn">
-                    <a href="#" id="signup-patient">Patient</a>
-                    <a href="#" id="doctor-login">Doctor</a>
-                </div>
-
-            </div>
-            <!-- Patient Sign & Login -->
-            <div class="popup">
-                <div class="popup-content">
-                    <div class="signup">
-                        <div class="Box">
-                            <form action="/" method="post">
-                                <img src="/static/images/close.png" alt="close"
-                                    class="close">
-                                <h3>Signup</h3>
-
-                                <div class="inputBox">
-                                    <label>User Name</label>
-                                    <input type="text" name="username" required>
-                                </div>
-                                <div class="inputBox">
-                                    <label>Email Address</label>
-                                    <input type="email" name="email" required>
-                                </div>
-                                <div class="inputBox">
-                                    <label>Password</label>
-                                    <input type="password" name="password"
-                                        required>
-                                </div>
-                                <input type="hidden" name="action" value="signup"> 
-                                <button type="submit" class="signup-btn">SIGNUP</button>
-                                <p class="link-to-login">Already have an
-                                    account? <a href="#" id="login-patient">Login</a></p>
-                            </form>
+        {% endfor %}
+    {% endif %}
+{% endwith %}
+<section id="banner">
+    <label class="index-logo">Brain Mentor</label>
+    <div class="banner-text">
+        <h1>We Will Save You</h1>
+        <p>Unlocking Hope, One Scan at a Time. Welcome to Brain Mentor, where cutting-edge technology meets compassion for a <br> brighter, healthier tomorrow.</p>
+        <div class="banner-btn">
+            <a href="#" id="signup-patient">Patient</a>
+            <a href="#" id="doctor-login">Doctor</a>
+        </div>
+    </div>
+    <!-- Patient Sign & Login -->
+    <div class="popup">
+        <div class="popup-content">
+            <div class="signup">
+                <div class="Box">
+                    <form action="/" method="post">
+                        <img src="/static/images/close.png" alt="close" class="close">
+                        <h3>Signup</h3>
+                        <div class="inputBox">
+                            <label>User Name</label>
+                            <input type="text" name="username" required>
                         </div>
-
-                    </div>
-                </div>
-            </div>
-            <div class="login-popup">
-                <div class="popup-content">
-                    <div class="signup">
-                        <div class="Box">
-                            <form action="/" method="post">
-                                <img src="/static/images/back.png" alt="close" class="login-back">
-                                <h3>Login</h3>
-            
-                                <div class="inputBox">
-                                    <label>User Name</label>
-                                    <input type="text" required name="username">
-                                </div>
-                                <div class="inputBox">
-                                    <label>Email Address</label>
-                                    <input type="text" required name="email">
-                                </div>
-                                <div class="inputBox">
-                                    <label>Password</label>
-                                    <input type="password" required name="password">
-                                </div>
-                                <input type="hidden" name="action" value="login"> 
-                                <button type="submit" class="signup-btn">Login</button>
-                                <p class="link-to-login">Don't have an account? <a href="#">Signup</a></p>
-            
-                                <!-- Google login button added within the form -->
-                                <div style="display: flex; align-items: center; justify-content: center; margin-top: 1rem;">
-                                    <a href="{{ url_for('googleLogin') }}" style="padding: 8px 16px; border: 1px solid #cbd5e0; border-radius: 0.375rem; display: flex; gap: 0.5rem; color: #4a5568; font-weight: 500; text-decoration: none; transition: border-color 0.15s, color 0.15s, box-shadow 0.15s;">
-                                        <img src="https://www.svgrepo.com/show/475656/google-color.svg" style="width: 1.5rem; height: 1.5rem;" alt="google logo">
-                                        <span>Login with Google</span>
-                                    </a>
-                                </div>
-                            </form>
+                        <div class="inputBox">
+                            <label>Email Address</label>
+                            <input type="email" name="email" required>
                         </div>
-                    </div>
-                </div>
-            </div>
-            
-
-            <!-- Doctor Login -->
-            <div class="doctor-login-popup">
-                <div class="popup-content">
-                    <div class="signup">
-                        <div class="Box">
-                            <form action>
-                                <img src="/static/images/close.png" alt="close"
-                                    class="close-doctor-popup">
-                                <h3>Login</h3>
-                                <div class="inputBox">
-                                    <label>User Name</label>
-                                    <input type="text" required>
-                                </div>
-                                <div class="inputBox">
-                                    <label>Email Address</label>
-                                    <input type="text" required>
-                                </div>
-
-                                <div class="inputBox">
-                                    <label>Password</label>
-                                    <input type="password" required>
-                                </div>
-                                <input type="hidden" name="action" value="login"> 
-
-                                <button type="submit" class="signup-btn">Login</button>
-                            </form>
+                        <div class="inputBox">
+                            <label>Password</label>
+                            <div class="password-input" style="position: relative;">
+                                <input type="password" name="password" id="passwordField1" required style="padding-right: 30px;">
+                                <i class="toggle-password fas fa-eye" onclick="togglePasswordVisibility('passwordField1')" style="position: absolute; top: 60%; right: 10px; transform: translateY(-50%); cursor: pointer;"></i>
+                            </div>
                         </div>
-
-                    </div>
+                        <input type="hidden" name="action" value="signup">
+                        <button type="submit" class="signup-btn">SIGNUP</button>
+                        <p class="link-to-login">Already have an account? <a href="#" id="login-patient">Login</a></p>
+                    </form>
                 </div>
             </div>
-            <script>
-                document.getElementById("signup-patient").addEventListener("click", function(){
-                    document.querySelector(".popup").style.display="flex";
-                })
-                     document.querySelector(".close").addEventListener("click",function(){
-                        document.querySelector(".popup").style.display="none";
-                     })
+        </div>
+    </div>
+    <div class="login-popup">
+        <div class="popup-content">
+            <div class="signup">
+                <div class="Box">
+                    <form action="/" method="post">
+                        <img src="/static/images/back.png" alt="close" class="login-back">
+                        <h3>Login</h3>
+                        <div class="inputBox">
+                            <label>User Name</label>
+                            <input type="text" required name="username">
+                        </div>
+                        <div class="inputBox">
+                            <label>Email Address</label>
+                            <input type="text" required name="email">
+                        </div>
+                        <div class="inputBox">
+                            <label>Password</label>
+                            <div class="password-input" style="position: relative;">
+                                <input type="password" name="password" id="passwordField2" required style="padding-right: 30px;">
+                                <i class="toggle-password fas fa-eye" onclick="togglePasswordVisibility('passwordField2')" style="position: absolute; top: 60%; right: 10px; transform: translateY(-50%); cursor: pointer;"></i>
+                            </div>
+                        </div>
+                        <input type="hidden" name="action" value="login">
+                        <button type="submit" class="signup-btn">Login</button>
+                        <p class="link-to-login">Don't have an account? <a href="#" class="back_to_signup">Signup</a></p>
+                        <!-- Google login button added within the form -->
+                        <div style="display: flex; align-items: center; justify-content: center; margin-top: 1rem;">
+                            <a href="{{ url_for('googleLogin') }}" style="padding: 8px 16px; border: 1px solid #cbd5e0; border-radius: 0.375rem; display: flex; gap: 0.5rem; color: #4a5568; font-weight: 500; text-decoration: none; transition: border-color 0.15s, color 0.15s, box-shadow 0.15s;">
+                                <img src="https://www.svgrepo.com/show/475656/google-color.svg" style="width: 1.5rem; height: 1.5rem;" alt="google logo">
+                                <span>Login with Google</span>
+                            </a>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Doctor Login -->
+    <div class="doctor-login-popup">
+        <div class="popup-content">
+            <div class="signup">
+                <div class="Box">
+                    <form action="/" method="post">
+                        <img src="/static/images/close.png" alt="close" class="close-doctor-popup">
+                        <h3>Login</h3>
+                        <div class="inputBox">
+                            <label>User Name</label>
+                            <input type="text" required name="username">
+                        </div>
+                        <div class="inputBox">
+                            <label>Email Address</label>
+                            <input type="text" required name="email">
+                        </div>
+                        <div class="inputBox">
+                            <label>Password</label>
+                            <div class="password-input" style="position: relative;">
+                                <input type="password" required name="password" id="passwordField3" style="padding-right: 30px;">
+                                <i class="toggle-password fas fa-eye" onclick="togglePasswordVisibility('passwordField3')" style="position: absolute; top: 60%; right: 10px; transform: translateY(-50%); cursor: pointer;"></i>
+                            </div>
+                        </div>
+                        <input type="hidden" name="action" value="login">
+                        <button type="submit" class="signup-btn">Login</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script>
+        document.getElementById("signup-patient").addEventListener("click", function(){
+            document.querySelector(".popup").style.display="flex";
+        });
+        document.querySelector(".close").addEventListener("click",function(){
+            document.querySelector(".popup").style.display="none";
+        });
+        document.getElementById("login-patient").addEventListener("click", function(){
+            document.querySelector(".login-popup").style.display="flex";
+        });
+        document.querySelector(".login-back").addEventListener("click",function(){
+            document.querySelector(".login-popup").style.display="none";
+        });
 
-                     
-///////////////////////////////////////////////////////////////////////////////////////////////
+        document.querySelector(".back_to_signup").addEventListener("click",function(){
+            document.querySelector(".login-popup").style.display="none";
+        });
+       
+        document.getElementById("doctor-login").addEventListener("click", function(){
+            document.querySelector(".doctor-login-popup").style.display="flex";
+        });
+        document.querySelector(".close-doctor-popup").addEventListener("click",function(){
+            document.querySelector(".doctor-login-popup").style.display="none";
+        });
 
- document.getElementById("login-patient").addEventListener("click", function(){
-                    document.querySelector(".login-popup").style.display="flex";
-                })
-                     document.querySelector(".login-back").addEventListener("click",function(){
-                        document.querySelector(".login-popup").style.display="none";
-                        
-                     })
-
-///////////////////////////////////////////////////////////////////////////////////////////////////
- document.getElementById("doctor-login").addEventListener("click", function(){
-                    document.querySelector(".doctor-login-popup").style.display="flex";
-                })
-                     document.querySelector(".close-doctor-popup").addEventListener("click",function(){
-                        document.querySelector(".doctor-login-popup").style.display="none";
-                     })
-            </script>
-
-        </section>
-    </body>
+        function togglePasswordVisibility(fieldId) {
+            var passwordField = document.getElementById(fieldId);
+            var eyeIcon = passwordField.nextElementSibling;
+    
+            if (passwordField.type === "password") {
+                passwordField.type = "text";
+                eyeIcon.classList.remove("fa-eye");
+                eyeIcon.classList.add("fa-eye-slash");
+            } else {
+                passwordField.type = "password";
+                eyeIcon.classList.remove("fa-eye-slash");
+                eyeIcon.classList.add("fa-eye");
+            }
+        }
+    </script>
+</section>
+</body>
 </html>
