--- a/templates/Doctors.html
+++ b/templates/Doctors.html
@@ -64,7 +64,8 @@
     
           <div class="first_content">
               <div class="title">
-                  <h1 style="margin-bottom: 30px; padding: 5px; background-color: black; color: white; margin-top: -20px;">Our Doctors Lists</h1>
+                <h2 style="width: 500px; margin-left: 425px; border-radius: 50px; background-color: rgb(58, 58, 58); color: white; margin-top: -50px; margin-bottom: 30px; padding: 5px;">Our Doctors Lists</h2>
+
                   <div>
                     
 
