--- a/templates/Detection.html
+++ b/templates/Detection.html
@@ -38,6 +38,7 @@
                     flex-direction: column;
                     align-items: center;
                     margin-bottom: 30px; /* Increased margin */
+                    margin-top: -90px;
                 }
         
                 #upload-section label {
@@ -153,7 +154,8 @@
             <div>
                 <form id="upload-section" action="/predict" method="post" enctype="multipart/form-data">
                     <input type="file" name="file" id="file" accept=".jpg, .jpeg, .png">
-                    <button type="submit" onclick="showProgress()">Check Tumor</button>
+                    <button style="background-color: #1bbc9b;" type="submit" onclick="showProgress()" onmouseover="this.style.backgroundColor='#000'" onmouseout="this.style.backgroundColor='#1bbc9b'">Check Tumor</button>
+
                 </form>
             
                 {% if message %}
@@ -235,93 +237,7 @@
         </footer>
        
 
-             <!-- Chatbot Script -->
-             <script
-             src='https://use.fontawesome.com/releases/v5.0.13/js/all.js'></script>
-         <script>
-
-const msgerForm = get(".msger-inputarea");
-const msgerInput = get(".msger-input");
-const msgerChat = get(".msger-chat");
-
-
-// Icons made by Freepik from www.flaticon.com
-const BOT_IMG = "https://image.flaticon.com/icons/svg/327/327779.svg";
-const PERSON_IMG = "https://image.flaticon.com/icons/svg/145/145867.svg";
-const BOT_NAME = "    ChatBot";
-const PERSON_NAME = "You";
-
-msgerForm.addEventListener("submit", event => {
-event.preventDefault();
-
-const msgText = msgerInput.value;
-if (!msgText) return;
-
-appendMessage(PERSON_NAME, PERSON_IMG, "right", msgText);
-msgerInput.value = "";
-botResponse(msgText);
-});
-
-function appendMessage(name, img, side, text) {
-//   Simple solution for small apps
-const msgHTML = `
-<div class="msg ${side}-msg">
-<div class="msg-img" style="background-image: url(${img})"></div>
-
-<div class="msg-bubble">
-<div class="msg-info">
-<div class="msg-info-name">${name}</div>
-<div class="msg-info-time">${formatDate(new Date())}</div>
-</div>
-
-<div class="msg-text">${text}</div>
-</div>
-</div>
-`;
-
-msgerChat.insertAdjacentHTML("beforeend", msgHTML);
-msgerChat.scrollTop += 500;
-}
-
-function botResponse(rawText) {
-
-// Bot Response
-$.get("/get", { msg: rawText }).done(function (data) {
- console.log(rawText);
- console.log(data);
- const msgText = data;
- appendMessage(BOT_NAME, BOT_IMG, "left", msgText);
-
-});
-
-}
-
-
-// Utils
-function get(selector, root = document) {
-return root.querySelector(selector);
-}
-
-function formatDate(date) {
-const h = "0" + date.getHours();
-const m = "0" + date.getMinutes();
-
-return `${h.slice(-2)}:${m.slice(-2)}`;
-}
-
-
-
-</script>
-
-         <!-- ////////////////////////////////////////////////////// -->
-         <script>
-         document.getElementById("signup-patient").addEventListener("click", function(){
-             document.querySelector(".chatbot-popup").style.display="flex";
-         })
-              document.querySelector(".close").addEventListener("click",function(){
-                 document.querySelector(".chatbot-popup").style.display="none";
-              })
-           </script>
+            
 
              <script
              src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
