--- a/templates/Home.html
+++ b/templates/Home.html
@@ -33,7 +33,6 @@
         <script src="https://kit.fontawesome.com/b33b219100.js"
             crossorigin="anonymous"></script>
 
-        <script src="/static/js/testimonail.js" defer></script>
         <script
             src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     </head>
@@ -93,8 +92,8 @@
 
                         <h1><span>BrainMentor</span></h1>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur
-                            <br> adipisicing elit. Praesentium corporis quo.
+                            Welcome to BrainMentor!
+                            <br>  Your journey to a healthier future starts here!
                         </p>
                         <a href="doctors" class="btn">Consult</a>
 
@@ -237,32 +236,44 @@ Chat icon to toggle the chatbot -->
                 </section>
 
 
-                <!-- Blogs -->
-
-            <section class="section_doctors">
-                <div class="info-doctors">
-                    <h3>Blogs</h3>
-                    <div class="line_doctors"></div>
-                        <div class="row mb-2">
-                            {% for blog in blogs %}
-                            <div class="col-md-4 mb-4">
-                                <div class="row g-0 border rounded overflow-hidden flex-md-row shadow-sm h-md-250 position-relative">
-                                    <div class="col p-4 d-flex flex-column position-static">
-                                        <strong class="d-inline-block mb-2 text-primary">{{ blog.blog_type }}</strong>
-                                        <h3 class="mb-0">{{ blog.tit_name }}</h3>
-                                        <div class="mb-1 text-muted">{{ blog.pub_date.year }}</div>
-                                        <p class="card-text mb-auto" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 100%;">{{ blog.content }}</p>
-                                        <i><p class="card-text mb-auto" style="color: grey;">{{ blog.author }}</p></i>
-                                        <a href="/blogs_deatil/{{blog.blog_id}}" class="stretched-link btn btn-primary">Continue reading</a>
-                                    </div>
+                <section class="section_doctors">
+                    <div class="info-doctors">
+                        <h3 style="margin-top: 30px;">Blogs</h3>
+                        <div class="line_doctors"></div>
+                       
+                <div class="container">
+                    <div class="row">
+                        {% for blog in blogs %}
+                        <div class="col-md-4 mb-4">
+                            <div class="card" style="width: 18rem;">
+                                {% if blog.base64_image %}
+                                    <!-- Display the image from Base64 encoded data -->
+                                    <img src="data:image/jpeg;base64,{{ blog.base64_image }}" class="card-img-top" alt="{{ blog.tit_name }}">
+                                {% else %}
+                                    <!-- Display a placeholder image if base64_image is empty -->
+                                    <img src="{{ url_for('static', filename='placeholder.jpg') }}" class="card-img-top" alt="Placeholder Image">
+                                {% endif %}
+                                <div class="card-body">
+                                    <h5 class="card-title">{{ blog.tit_name }}</h5>
+                                    <p class="card-text">{{ blog.content }}</p>
+                                    <p class="card-text"><small class="text-muted">By {{ blog.author }} on {{ blog.pub_date.strftime('%B %d, %Y') }}</small></p>
+                                    <!-- You can add more information here if needed -->
+                                    <a href="/blogs_deatil/{{blog.blog_id}}" class="stretched-link btn btn-primary">Read More</a>
                                 </div>
                             </div>
-                            {% if loop.index % 3 == 0 %}
-                                </div><div class="row mb-2">
-                            {% endif %}
-                            {% endfor %}
                         </div>
-                </div> 
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
+        </section>
+                
+                
+                
+
+               
+               <!-- Fallback to local Bootstrap JS file if CDN fails -->
+<script src="{{ url_for('static', filename='bootstrap/js/bootstrap.bundle.min.js') }}"></script>
                             
                             
                 </section>
@@ -315,10 +326,7 @@ Chat icon to toggle the chatbot -->
                     </footer>
                 </main>
 
-                <script
-                    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-                    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-                    crossorigin="anonymous"></script>
+               
                     <script>
                         document.addEventListener("DOMContentLoaded", function() {
                             var links = document.querySelectorAll("#menu a");
@@ -407,8 +415,8 @@ Chat icon to toggle the chatbot -->
 
                         <h1><span>BrainMentor</span></h1>
                         <p>
-                            Lorem ipsum dolor sit ame t consectetur
-                            <br> adipisicing elit. Praesentium corporis quo.
+                            Welcome to BrainMentor!
+                            <br>  Your journey to a healthier future starts here!
                         </p>
                         <a href="doctors" class="btn">Consult</a>
 
@@ -549,38 +557,54 @@ Chat icon to toggle the chatbot -->
 
 
                 </section>
-
-
-                <!-- Blogs -->
-
-            <section class="section_doctors">
-                <div class="info-doctors">
-                    <h3>Blogs</h3>
-                    <div class="line_doctors"></div>
-                        <div class="row mb-2">
-                            {% for blog in blogs %}
-                            <div class="col-md-4 mb-4">
-                                <div class="row g-0 border rounded overflow-hidden flex-md-row shadow-sm h-md-250 position-relative">
-                                    <div class="col p-4 d-flex flex-column position-static">
-                                        <strong class="d-inline-block mb-2 text-primary">{{ blog.blog_type }}</strong>
-                                        <h3 class="mb-0">{{ blog.tit_name }}</h3>
-                                        <div class="mb-1 text-muted">{{ blog.pub_date.year }}</div>
-                                        <p class="card-text mb-auto" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 100%;">{{ blog.content }}</p>
-                                        <i><p class="card-text mb-auto" style="color: grey;">{{ blog.author }}</p></i>
-                                        <a href="/blogs_deatil/{{blog.blog_id}}" class="stretched-link btn btn-primary">Continue reading</a>
+               
+                <section class="section_doctors">
+                    <div class="info-doctors">
+                        <h3 style="margin-top: 30px;">Blogs</h3>
+                        <div class="line_doctors"></div>
+                        <div class="container" style="margin-top: -60px;">
+                            <div class="row">
+                                {% for blog in blogs %}
+                                <div class="col-md-4 mb-4">
+                                    <div class="card" style="width: 18rem;">
+                                        {% if blog.base64_image %}
+                                            <!-- Display the image from Base64 encoded data with fixed size -->
+                                            <img src="data:image/jpeg;base64,{{ blog.base64_image }}" class="card-img-top" alt="{{ blog.tit_name }}" style="width: 250px; height: 200px; object-fit: cover;">
+                                        {% else %}
+                                            <!-- Display a placeholder image if base64_image is empty -->
+                                            <img src="{{ url_for('static', filename='placeholder.jpg') }}" class="card-img-top" alt="Placeholder Image" style="width: 300px; height: 300px; object-fit: cover;">
+                                        {% endif %}
+                                        <div class="card-body" style="max-height: 220px; overflow: hidden;">
+                                            <h5 class="card-title">{{ blog.tit_name }}</h5>
+                                            <p class="card-text">
+                                                {% if blog.content | length > 30 %}
+                                                    {{ blog.content[:30] }}...
+                                                {% else %}
+                                                    {{ blog.content }}
+                                                {% endif %}
+                                            </p>
+                                            <p class="card-text"><small class="text-muted" style="font-style: italic;">By {{ blog.author }} on {{ blog.pub_date.strftime('%B %d, %Y') }}</small></p>
+                                            <!-- You can add more information here if needed -->
+                                            <a href="/blogs_detail/{{blog.blog_id}}" class="stretched-link btn btn-primary">Read More</a>
+                                        </div>
                                     </div>
                                 </div>
+                                {% endfor %}
                             </div>
-                            {% if loop.index % 3 == 0 %}
-                                </div><div class="row mb-2">
-                            {% endif %}
-                            {% endfor %}
                         </div>
-                </div> 
-                            
-                            
+                        
+                    </div>
                 </section>
+                
+                
+                
+                
+                
+
                
+               <!-- Fallback to local Bootstrap JS file if CDN fails -->
+<script src="{{ url_for('static', filename='bootstrap/js/bootstrap.bundle.min.js') }}"></script>
+
                     
               
                     <!-- Footer -->
@@ -629,10 +653,7 @@ Chat icon to toggle the chatbot -->
                     </footer>
                 </main>
 
-                <script
-                    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-                    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-                    crossorigin="anonymous"></script>
+             
                     <script>
                         document.addEventListener("DOMContentLoaded", function() {
                             var links = document.querySelectorAll("#menu a");
